Update link to Azure deploy image
The https link is broken, I changed it to http

--- a/content/download/index.html.haml
+++ b/content/download/index.html.haml
@@ -39,8 +39,7 @@ title: Jenkins installation and setup
                   Changelog
                 |
                 %a.item{:href=>'/doc/upgrade-guide'}
-                  Upgrade Guide
-                |
+                  Upgrade Guide                |
                 %a.item{:href=>'http://mirrors.jenkins.io/war-stable/'}
                   Past Releases
 
@@ -69,7 +68,7 @@ title: Jenkins installation and setup
                   .m-3
                     %a{:href => 'https://aka.ms/jenkins-on-azure'}
                       - # Contact azdevopspub@microsoft.com if issues arise
-                      %img{:src => 'https://azuredeploy.net/deploybutton.png'}/
+                      %img{:src => 'http://azuredeploy.net/deploybutton.png'}/
 
             .list-group
             %strong
